# ProyectoPooR

./: .gitignore  CMakeLists.txt  DOCUMENTACION_COMPLETA.md  DOCUMENTACION_MAESTRA.md  README.md  documentacion_tecnica.md  main.cpp
data/: buses.json  horarios.json  incidentes.json  paradas.json  rutas.json  usuarios.json
include/: Administrador.h  Bus.h  Conductor.h  Coordenada.h  Estudiante.h  GestorArchivos.h  HorarioRuta.h  Incidente.h  Parada.h  Ruta.h  RutaBarrio.h  RutaCentro.h  SistemaTransporte.h  UbicacionGPS.h  Usuario.h
src/: Administrador.cpp  Bus.cpp  Conductor.cpp  Coordenada.cpp  Estudiante.cpp  GestorArchivos.cpp  HorarioRuta.cpp  Incidente.cpp  Parada.cpp  Ruta.cpp  RutaBarrio.cpp  RutaCentro.cpp  SistemaTransporte.cpp  UbicacionGPS.cpp  Usuario.cpp
